Bug 59112 - resizing sort dialog breaks scollbar and disables all entries
Summary: resizing sort dialog breaks scollbar and disables all entries
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0 target:4.0.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-07 21:46 UTC by Markus Mohrhard
Modified: 2013-01-11 00:58 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
scrollbar problem (39.87 KB, image/png)
2013-01-07 21:46 UTC, Markus Mohrhard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Mohrhard 2013-01-07 21:46:30 UTC
Created attachment 72652 [details]
scrollbar problem

Resizing the sort dialog vertically breaks the scrollbar and disables all the defined entries if they selected the same column.
Comment 1 Caolán McNamara 2013-01-09 13:25:10 UTC
Is the problem visible in the screenshot ? I can't see when I twiddle the dialog anything going wrong.
Comment 2 Markus Mohrhard 2013-01-09 15:46:53 UTC
(In reply to comment #1)
> Is the problem visible in the screenshot ? I can't see when I twiddle the
> dialog anything going wrong.

Yes. See the scroll bar on the right but also that the top entry is Sort Key2 and not Sort Key1. It looks like the scroll bar resets itself when you resize the dialog and therefore can't move to the top entries anymore.
Comment 3 Caolán McNamara 2013-01-10 13:30:33 UTC
ah yeah, I see it now
Comment 4 Not Assigned 2013-01-10 13:56:44 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2c403c7f36561410418ebb9f86664e46a8c1c968

Resolves: fdo#59112 re-scroll to current entry when dialog resized



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2013-01-10 13:57:36 UTC
that seems to do the right thing, patch proposed for 4-0 on gerrit
Comment 6 Jean-Baptiste Faure 2013-01-10 14:09:23 UTC
Is it possible that this bug have the same root cause than bug 59073 ?

Best regards. JBF
Comment 7 Not Assigned 2013-01-11 00:58:35 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90fe1b210025c19e885b093bf2f556d5b62f9dd4&h=libreoffice-4-0

Resolves: fdo#59112 re-scroll to current entry when dialog resized


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.