Resolves: fdo#59112 re-scroll to current entry when dialog resized

Change-Id: I96486f6edad11520bf9bb43b700b1716d9b2f170
(cherry picked from commit 2c403c7f36561410418ebb9f86664e46a8c1c968)
Reviewed-on: https://gerrit.libreoffice.org/1628
Reviewed-by: Kohei Yoshida <kohei.yoshida@gmail.com>
Tested-by: Kohei Yoshida <kohei.yoshida@gmail.com>